configs/stm32mp2: Add missing configuration to build successfully
Add missing host package.
Add cmake dependency in OP-TEE OS.
Add optee subproject tarball description.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp257f_ev1_demo_defconfig
+++ b/configs/st_stm32mp257f_ev1_demo_defconfig
@@ -27,6 +27,7 @@ BR2_PACKAGE_QT5BASE_EGLFS=y
 BR2_PACKAGE_QT5BASE_FONTCONFIG=y
 BR2_PACKAGE_XKEYBOARD_CONFIG=y
 BR2_PACKAGE_EVTEST=y
+BR2_PACKAGE_GCNANO_BINARIES=y
 BR2_PACKAGE_CAIRO=y
 BR2_PACKAGE_CAIRO_PNG=y
 BR2_PACKAGE_JPEG=y
@@ -40,7 +41,14 @@ BR2_PACKAGE_LIBV4L_UTILS=y
 BR2_PACKAGE_LIBXKBCOMMON=y
 BR2_PACKAGE_CAN_UTILS=y
 BR2_PACKAGE_IPROUTE2=y
+BR2_PACKAGE_OPTEE_CLIENT_CUSTOM_TARBALL=y
+BR2_PACKAGE_OPTEE_CLIENT_CUSTOM_TARBALL_LOCATION="$(call github,OP-TEE,optee_client)3.19.0.tar.gz"
 BR2_PACKAGE_OPTEE_EXAMPLES=y
+BR2_PACKAGE_OPTEE_EXAMPLES_CUSTOM_TARBALL=y
+BR2_PACKAGE_OPTEE_EXAMPLES_CUSTOM_TARBALL_LOCATION="$(call github,linaro-swg,optee_examples)3.19.0.tar.gz"
+BR2_PACKAGE_OPTEE_TEST=y
+BR2_PACKAGE_OPTEE_TEST_CUSTOM_TARBALL=y
+BR2_PACKAGE_OPTEE_TEST_CUSTOM_TARBALL_LOCATION="$(call github,OP-TEE,optee_test)3.19.0.tar.gz"
 BR2_PACKAGE_RAUC=y
 BR2_PACKAGE_RAUC_DBUS=y
 BR2_PACKAGE_RAUC_GPT=y
@@ -67,6 +75,7 @@ BR2_TARGET_OPTEE_OS_CUSTOM_TARBALL=y
 BR2_TARGET_OPTEE_OS_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,optee_os)3.19.0-stm32mp-r2.tar.gz"
 BR2_TARGET_OPTEE_OS_NEEDS_DTC=y
 BR2_TARGET_OPTEE_OS_NEEDS_PYTHON_CRYPTOGRAPHY=y
+BR2_TARGET_OPTEE_OS_NEEDS_CMAKE=y
 # BR2_TARGET_OPTEE_OS_SERVICES is not set
 BR2_TARGET_OPTEE_OS_PLATFORM="stm32mp2"
 BR2_TARGET_OPTEE_OS_ADDITIONAL_VARIABLES="CFG_EMBED_DTB_SOURCE_FILE=stm32mp257f-ev1.dts CFG_SCMI_SCPFW=y"
@@ -78,4 +87,6 @@ BR2_TARGET_UBOOT_BOARD_DEFCONFIG="stm32mp25"
 BR2_TARGET_UBOOT_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/common/uboot-enable-squashfs.config"
 BR2_TARGET_UBOOT_FORMAT_DTB=y
 BR2_TARGET_UBOOT_CUSTOM_MAKEOPTS="DEVICE_TREE=stm32mp257f-ev1"
+BR2_PACKAGE_HOST_GENEXT2FS=y
+BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_RAUC=y
