--- a/configs/st_stm32mp257f_ev1_defconfig
+++ b/configs/st_stm32mp257f_ev1_defconfig
@@ -34,6 +34,7 @@ BR2_TARGET_OPTEE_OS_CUSTOM_TARBALL=y
 BR2_TARGET_OPTEE_OS_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,optee_os)3.19.0-stm32mp-r2.tar.gz"
 BR2_TARGET_OPTEE_OS_NEEDS_DTC=y
 BR2_TARGET_OPTEE_OS_NEEDS_PYTHON_CRYPTOGRAPHY=y
+BR2_TARGET_OPTEE_OS_NEEDS_CMAKE=y
 # BR2_TARGET_OPTEE_OS_SDK is not set
 # BR2_TARGET_OPTEE_OS_SERVICES is not set
 BR2_TARGET_OPTEE_OS_PLATFORM="stm32mp2"
@@ -45,3 +46,4 @@ BR2_TARGET_UBOOT_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,u-boo
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="stm32mp25"
 BR2_TARGET_UBOOT_FORMAT_DTB=y
 BR2_TARGET_UBOOT_CUSTOM_MAKEOPTS="DEVICE_TREE=stm32mp257f-ev1"
+BR2_PACKAGE_HOST_GENIMAGE=y
