--- a/board/stmicroelectronics/stm32mp2/genimage.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage.cfg
@@ -3,33 +3,27 @@ image sdcard.img {
 		partition-table-type = "gpt"
 	}
 
-	partition fsbla {
+	partition fsbl1 {
 		image = "tf-a-stm32mp257f-ev1.stm32"
 		size = 256k
 	}
 
-	partition metadata1 {
-		image = "metadata.bin"
+	partition fsbl2 {
+		image = "tf-a-stm32mp257f-ev1.stm32"
 		size = 256k
-		partition-type-uuid = "8a7a84a0-8387-40f6-ab41-a8b9a5a60d23"
 	}
 
 	partition fip {
 		image = "fip.bin"
 		size = 4M
-		partition-uuid = "4fd84c93-54ef-463f-a7ef-ae25ff887087"
-		partition-type-uuid = "19d5df83-11b0-457b-be2c-7559c13142a5"
 	}
 
 	partition u-boot-env {
-		offset = 9233k
 		size = 512k
-		partition-type-uuid = "3de21764-95bd-54bd-a5c3-4abe786f38a8"
 	}
 
 	partition rootfs {
 		image = "rootfs.ext4"
-		partition-uuid="e91c4e10-16e6-4c0e-bd0e-77becf4a3582"
 		bootable = "yes"
 	}
 }
