configs/stm32mp257f_ev1_demo: Add support for TF-M
Add support for TF-M with the matching 3rd parties versions

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp257f_ev1_demo_defconfig
+++ b/configs/st_stm32mp257f_ev1_demo_defconfig
@@ -79,6 +79,17 @@ BR2_TARGET_OPTEE_OS_NEEDS_CMAKE=y
 # BR2_TARGET_OPTEE_OS_SERVICES is not set
 BR2_TARGET_OPTEE_OS_PLATFORM="stm32mp2"
 BR2_TARGET_OPTEE_OS_ADDITIONAL_VARIABLES="CFG_EMBED_DTB_SOURCE_FILE=stm32mp257f-ev1.dts CFG_SCMI_SCPFW=y"
+BR2_TARGET_TRUSTED_FIRMWARE_M=y
+BR2_TARGET_TRUSTED_FIRMWARE_M_CUSTOM_TARBALL=y
+BR2_TARGET_TRUSTED_FIRMWARE_M_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,trusted-firmware-m)v1.7.0-stm32mp25-r9.1.tar.gz"
+BR2_TARGET_TFM_MBEDTLS_CUSTOM_TARBALL_LOCATION="$(call github,mbed-tls,mbedtls)v3.2.1.tar.gz"
+BR2_TARGET_TFM_MCUBOOT_CUSTOM_TARBALL_LOCATION="$(call github,mcu-tools,mcuboot)v1.9.0.tar.gz"
+BR2_TARGET_TFM_QCBOR_CUSTOM_TARBALL_LOCATION="$(call github,laurencelundblade,qcbor)b0e70332.tar.gz"
+BR2_TARGET_TFM_CMSIS_CUSTOM_TARBALL_LOCATION="$(call github,arm-software,cmsis_6)d0c460c169.tar.gz"
+BR2_TARGET_TFM_TESTS_CUSTOM_TARBALL_LOCATION="https://git.trustedfirmware.org/TF-M/tf-m-tests.git/+archive/TF-Mv1.7.0.tar.gz"
+BR2_TARGET_TRUSTED_FIRMWARE_M_PLATFORM="stm/stm32mp257f_ev1"
+BR2_TARGET_TRUSTED_FIRMWARE_M_ADDITIONAL_VARIABLES="-DNS=OFF -DDTS_BOARD_S=stm32mp257f-ev1-s.dts -DTFM_PROFILE=profile_small"
+BR2_TARGET_TRUSTED_FIRMWARE_M_DEBUG=y
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_TARBALL=y
