board/stm32mp1/dts: Add CubeMX devicetree fixes
Devicetree generated by STM32CubeMX have few issues that raise build
errors. This patch fixes them.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157f-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp157f-dk2-mx.dts
@@ -1348,6 +1348,16 @@
 	cpu-supply = <&vddcore>;
 };
 
+&pinctrl{
+	stusb1600_pins_a:stusb1600-0{
+
+		pins{
+			bias-pull-up;
+			pinmux = <STM32_PINMUX('I', 11, GPIO)>;
+		};
+	};
+};
+
 &usbh_ohci{
 	phys = <&usbphyc_port0>;
 };
