--- a/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp135f-dk-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/uboot-dts/stm32mp135f-dk-mx.dts
@@ -86,7 +86,7 @@
 		compatible = "gpio-leds";
 
 		led-blue{
-			function = [A-Z]ED_FUNCTION_HEARTBEAT;
+			function = LED_FUNCTION_HEARTBEAT;
 			color = <LED_COLOR_ID_BLUE>;
 			gpios = <&gpioa 14 GPIO_ACTIVE_LOW>;
 			linux,default-trigger = "heartbeat";
