board/stm32mp2/genimage: Restore metadata partitions and UUIDs and add precompiled metadata
This reverts commit a3600ff0a2e8a106bf0309d45ea016b97f391e05.

We've planned to support FWU in this external eventually so keep this
partition layout for now so we don't have to reconfigure TF-A U-Boot and
Rauc later on.

The firmware update metadata used by TF-A is no longer generated by the python
tool integrated in the TF-A sources. They are now generated by the mkfwumdata
tool in the U-Boot sources. Prebuild a metadata binary using mkfwumdata and use
it as a default until we properly support the FWU feature in the demo
configuration.

--- a/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
@@ -3,34 +3,54 @@ image sdcard.img {
 		partition-table-type = "gpt"
 	}
 
-	partition fsbl1 {
+	partition fsbla1 {
 		image = "tf-a-stm32mp257f-ev1.stm32"
 		size = 256k
 	}
 
-	partition fsbl2 {
+	partition fsbla2 {
 		image = "tf-a-stm32mp257f-ev1.stm32"
 		size = 256k
+	}
+
+	partition metadata1 {
+		image = "metadata.bin"
+		size = 256k
+		partition-type-uuid = "8a7a84a0-8387-40f6-ab41-a8b9a5a60d23"
+	}
+
+	partition metadata2 {
+		image = "metadata.bin"
+		size = 256k
+		partition-type-uuid = "8a7a84a0-8387-40f6-ab41-a8b9a5a60d23"
 	}
 
 	partition fip-a {
 		image = "fip.bin"
-		size = 4M
+		size = 3M
+		partition-uuid = "4fd84c93-54ef-463f-a7ef-ae25ff887087"
+		partition-type-uuid = "19d5df83-11b0-457b-be2c-7559c13142a5"
 	}
 
 	partition fip-b {
 		image = "fip.bin"
-		size = 4M
+		size = 3M
+		partition-uuid = "09c54952-d5bf-45af-acee-335303766fb3"
+		partition-type-uuid = "19d5df83-11b0-457b-be2c-7559c13142a5"
 	}
 
 	partition u-boot-env {
 		image = "uEnv.bin"
-		size = 512k
+		offset = 9M
+		size = 8k
+		partition-type-uuid = "3de21764-95bd-54bd-a5c3-4abe786f38a8"
 	}
 
 	partition u-boot-env-red {
 		image = "uEnv.bin"
-		size = 512k
+		offset = 9472k
+		size = 8k
+		partition-type-uuid = "3de21764-95bd-54bd-a5c3-4abe786f38a8"
 	}
 
 	partition rootfs-a {
