--- a/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
@@ -4,12 +4,12 @@ image sdcard.img {
 	}
 
 	partition fsbla1 {
-		image = "tf-a-stm32mp257f-ev1.stm32"
+		image = "%ATFBIN%"
 		size = 256k
 	}
 
 	partition fsbla2 {
-		image = "tf-a-stm32mp257f-ev1.stm32"
+		image = "%ATFBIN%"
 		size = 256k
 	}
 
