configs/stm32mp2: Enable host-bmap tool
Enable host bmap tool to be able to generate bmap image.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp257f_ev1_defconfig
+++ b/configs/st_stm32mp257f_ev1_defconfig
@@ -47,4 +47,5 @@ BR2_TARGET_UBOOT_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,u-boo
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="stm32mp25"
 BR2_TARGET_UBOOT_FORMAT_DTB=y
 BR2_TARGET_UBOOT_CUSTOM_MAKEOPTS="DEVICE_TREE=stm32mp257f-ev1"
+BR2_PACKAGE_HOST_BMAP_TOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
