board/stm32mp1/linux-dts/stm32mp157f-dk2-mx: Fix ltdc pinctrl phandle missing
Fix missing ltdc phandle to ltdc pinctrl description.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/board/stmicroelectronics/stm32mp1/linux-dts/stm32mp157f-dk2-mx.dts
+++ b/board/stmicroelectronics/stm32mp1/linux-dts/stm32mp157f-dk2-mx.dts
@@ -1131,6 +1131,9 @@
 
 &ltdc{
 	status = "okay";
+	pinctrl-names = "default", "sleep";
+	pinctrl-0 = <&ltdc_pins_mx>;
+	pinctrl-1 = <&ltdc_sleep_pins_mx>;
 
 	/* USER CODE BEGIN ltdc */
 	default-on;
