board/stm32mp2/genimage-demo: Use partlabel to detect the right partition
As mmc devices does not have aliases in the devicetree, Linux might
sometimes switch the mmcblkX number, which prevent the board to boot
correctly. Use partlabel to avoid that.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/board/stmicroelectronics/stm32mp2/overlay-demo/etc/fw_env.config
+++ b/board/stmicroelectronics/stm32mp2/overlay-demo/etc/fw_env.config
@@ -1,2 +1,2 @@
-/dev/mmcblk0p7 0 0x2000
-/dev/mmcblk0p8 0 0x2000
+/dev/disk/by-partlabel/u-boot-env 0 0x2000
+/dev/disk/by-partlabel/u-boot-env-red 0 0x2000
