--- a/board/stmicroelectronics/stm32mp2/overlay-demo/etc/rauc/system.conf
+++ b/board/stmicroelectronics/stm32mp2/overlay-demo/etc/rauc/system.conf
@@ -8,11 +8,11 @@ path=/etc/rauc/ca.cert.pem
 use-bundle-signing-time=true
 
 [slot.rootfs.0]
-device=/dev/mmcblk0p9
+device=/dev/disk/by-partlabel/rootfs-a
 type=raw
 bootname=A
 
 [slot.rootfs.1]
-device=/dev/mmcblk0p10
+device=/dev/disk/by-partlabel/rootfs-b
 type=raw
 bootname=B
