--- a/board/stmicroelectronics/stm32mp2/overlay-demo/boot/extlinux/extlinux.conf
+++ b/board/stmicroelectronics/stm32mp2/overlay-demo/boot/extlinux/extlinux.conf
@@ -1,4 +1,4 @@
 label %DTB_NAME%-buildroot
   kernel /boot/Image.gz
-  fdtdir /boot/
-  append root=/dev/mmcblk0p${extlinux_bootpart} ${raucslot} rootwait
+  devicetree /boot/%DTB_NAME%.dtb
+  append root=PARTLABEL=${extlinux_bootpart} ${raucslot} rootwait
