configs/stm32mp2_demo: Add OP-TEE OS missing build option
Add a missing CFG_STM32MP_PROFILE=secure_and_system_services build option.
optee-examples seems to not work properly without it.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp257f_ev1_demo_defconfig
+++ b/configs/st_stm32mp257f_ev1_demo_defconfig
@@ -80,7 +80,7 @@ BR2_TARGET_OPTEE_OS_NEEDS_CMAKE=y
 # BR2_TARGET_OPTEE_OS_SERVICES is not set
 BR2_TARGET_OPTEE_OS_PLATFORM="stm32mp2"
 BR2_TARGET_OPTEE_OS_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp2/optee-dts/*"
-BR2_TARGET_OPTEE_OS_ADDITIONAL_VARIABLES="CFG_EMBED_DTB_SOURCE_FILE=stm32mp257f-ev1-ca35tdcid-ostl.dts CFG_SCMI_SCPFW=y CFG_STM32MP25=y"
+BR2_TARGET_OPTEE_OS_ADDITIONAL_VARIABLES="CFG_EMBED_DTB_SOURCE_FILE=stm32mp257f-ev1-ca35tdcid-ostl.dts CFG_SCMI_SCPFW=y CFG_STM32MP25=y CFG_STM32MP_PROFILE=secure_and_system_services"
 BR2_TARGET_TRUSTED_FIRMWARE_M=y
 BR2_TARGET_TRUSTED_FIRMWARE_M_CUSTOM_TARBALL=y
 BR2_TARGET_TRUSTED_FIRMWARE_M_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,trusted-firmware-m)v1.7.0-stm32mp25-r9.1.tar.gz"
