board/stmicroelectronics/stm32mp2: drop dual FSBL/FIP in demo configuration
We currently don't support updating the firmware, so drop the
partitions that are in fact no used.

Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
@@ -3,28 +3,14 @@ image sdcard.img {
 		partition-table-type = "gpt"
 	}
 
-	partition fsbla1 {
+	partition fsbla {
 		image = "%ATFBIN%"
 		size = 256k
 	}
 
-	partition fsbla2 {
-		image = "%ATFBIN%"
-		size = 256k
-	}
-
-	partition fip-a {
+	partition fip {
 		image = "fip.bin"
-		size = 3M
-		partition-uuid = "4fd84c93-54ef-463f-a7ef-ae25ff887087"
-		partition-type-uuid = "19d5df83-11b0-457b-be2c-7559c13142a5"
-	}
-
-	partition fip-b {
-		image = "fip.bin"
-		size = 3M
-		partition-uuid = "09c54952-d5bf-45af-acee-335303766fb3"
-		partition-type-uuid = "19d5df83-11b0-457b-be2c-7559c13142a5"
+		size = 4M
 	}
 
 	partition u-boot-env {
