board/stmicroelectronics/stm32mp2: clarify offset/size of U-Boot environment partitions
Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
@@ -15,15 +15,19 @@ image sdcard.img {
 
 	partition u-boot-env {
 		image = "uEnv.bin"
-		offset = 9M
-		size = 8k
+		# Matches CONFIG_ENV_OFFSET in U-Boot
+		offset = 0x900000
+		# Matches CONFIG_ENV_SIZE in U-Boot
+		size = 0x2000
 		partition-type-uuid = "3de21764-95bd-54bd-a5c3-4abe786f38a8"
 	}
 
 	partition u-boot-env-red {
 		image = "uEnv.bin"
-		offset = 9472k
-		size = 8k
+		# Matches CONFIG_ENV_OFFSET_REDUND in U-Boot
+		offset = 0x940000
+		# Matches CONFIG_ENV_SIZE in U-Boot
+		size = 0x2000
 		partition-type-uuid = "3de21764-95bd-54bd-a5c3-4abe786f38a8"
 	}
 
