--- a/board/stmicroelectronics/stm32mp2/genimage.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage.cfg
@@ -14,7 +14,17 @@ image sdcard.img {
 	}
 
 	partition u-boot-env {
-		size = 512k
+		# Matches CONFIG_ENV_OFFSET in U-Boot
+		offset = 0x900000
+		# Matches CONFIG_ENV_SIZE in U-Boot
+		size = 0x2000
+	}
+
+	partition u-boot-env-red {
+		# Matches CONFIG_ENV_OFFSET_REDUND in U-Boot
+		offset = 0x940000
+		# Matches CONFIG_ENV_SIZE in U-Boot
+		size = 0x2000
 	}
 
 	partition rootfs {
