board/stmicroelectronics/stm32mp2: align extlinux.conf files
Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/board/stmicroelectronics/stm32mp2/overlay-demo/boot/extlinux/extlinux.conf
+++ b/board/stmicroelectronics/stm32mp2/overlay-demo/boot/extlinux/extlinux.conf
@@ -1,4 +1,4 @@
 label %DTB_NAME%-buildroot
   kernel /boot/Image.gz
   devicetree /boot/%DTB_NAME%.dtb
-  append root=PARTLABEL=${extlinux_bootpart} ${raucslot} rootwait
+  append root=PARTLABEL=${extlinux_bootpart} ${raucslot} rootwait console=ttySTM0,115200n8
