--- a/board/stmicroelectronics/stm32mp2/overlay/boot/extlinux/extlinux.conf
+++ b/board/stmicroelectronics/stm32mp2/overlay/boot/extlinux/extlinux.conf
@@ -1,5 +1,4 @@
 label %DTB_NAME%-buildroot
   kernel /boot/Image.gz
   devicetree /boot/%DTB_NAME%.dtb
-  append root=PARTUUID=e91c4e10-16e6-4c0e-bd0e-77becf4a3582 rootwait console=ttySTM0,115200n8
-
+  append root=PARTLABEL=rootfs rootwait console=ttySTM0,115200n8
