configs/st_stm32mp257f_ev1_demo: use Buildroot features to generate U-Boot env image
Instead of open-coding the logic in a post-build script, let's use
Buildroot-provided mechanism to generate the U-Boot environment image.

Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
@@ -14,7 +14,7 @@ image sdcard.img {
 	}
 
 	partition u-boot-env {
-		image = "uEnv.bin"
+		image = "uboot-env.bin"
 		# Matches CONFIG_ENV_OFFSET in U-Boot
 		offset = 0x900000
 		# Matches CONFIG_ENV_SIZE in U-Boot
@@ -22,7 +22,7 @@ image sdcard.img {
 	}
 
 	partition u-boot-env-red {
-		image = "uEnv.bin"
+		image = "uboot-env.bin"
 		# Matches CONFIG_ENV_OFFSET_REDUND in U-Boot
 		offset = 0x940000
 		# Matches CONFIG_ENV_SIZE in U-Boot
