board/stmicroelectronics/stm32mp1: create proper U-Boot env partitions
These partitions match the U-Boot configuration in terms of where the
environment is stored.

The extlinux.conf are changed to use PARTLABEL= instead to not depend
on the partition numbering. For /etc/fstab, support of labels is not
enabled in Busybox, so we have to continue to use a partition number,
which gets updated.

Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/board/stmicroelectronics/stm32mp1/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp1/genimage-demo.cfg
@@ -16,7 +16,17 @@ image sdcard.img {
 	}
 
 	partition u-boot-env {
-		size = 2M
+		# Matches CONFIG_ENV_OFFSET in U-Boot
+		offset = 0x900000
+		# Matches CONFIG_ENV_SIZE in U-Boot
+		size = 0x2000
+	}
+
+	partition u-boot-env-red {
+		# Matches CONFIG_ENV_OFFSET_REDUND in U-Boot
+		offset = 0x940000
+		# Matches CONFIG_ENV_SIZE in U-Boot
+		size = 0x2000
 	}
 
 	partition rootfs-a {
