--- a/board/stmicroelectronics/stm32mp1/overlay-demo/boot/extlinux/extlinux.conf
+++ b/board/stmicroelectronics/stm32mp1/overlay-demo/boot/extlinux/extlinux.conf
@@ -1,4 +1,4 @@
 label %DTB_NAME%-buildroot
   kernel /boot/zImage
   devicetree /boot/%DTB_NAME%.dtb
-  append root=/dev/mmcblk0p${distro_bootpart} ${raucslot} rootwait
+  append root=PARTLABEL=${extlinux_bootpart} ${raucslot} rootwait
