configs/st_stm32mp1_*demo: mimic U-Boot environment logic of stm32mp2
Prior to this commit, we were handling the STM32MP2 U-Boot environment
for our demo configurations differently than on STM32MP1. This commit
aligns STM32MP1 to the same logic as STM32MP2.

Signed-off-by: Thomas Petazzoni <thomas.petazzoni@bootlin.com>

--- a/board/stmicroelectronics/stm32mp1/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp1/genimage-demo.cfg
@@ -16,6 +16,7 @@ image sdcard.img {
 	}
 
 	partition u-boot-env {
+		image = "uboot-env.bin"
 		# Matches CONFIG_ENV_OFFSET in U-Boot
 		offset = 0x900000
 		# Matches CONFIG_ENV_SIZE in U-Boot
@@ -23,6 +24,7 @@ image sdcard.img {
 	}
 
 	partition u-boot-env-red {
+		image = "uboot-env.bin"
 		# Matches CONFIG_ENV_OFFSET_REDUND in U-Boot
 		offset = 0x940000
 		# Matches CONFIG_ENV_SIZE in U-Boot
