board/stm32mp2/genimage-demo: set rauc parameters for mount prefix and data directory
By default, rauc tries to mount bundles in /mnt/rauc, which will fail in
our case because /mnt is read-only.

Set the mountprefix system parameter so that rauc mounts bundles in
/tmp/rauc instead.

Additionally, the rauc documentation recommends using a persistent, non
redundant file to store update status and other information.

Set the data-directory system parameter so that rauc uses /data/rauc to
store its persistent data.

Signed-off-by: Romain Gantois <romain.gantois@bootlin.com>

--- a/board/stmicroelectronics/stm32mp2/overlay-demo/etc/rauc/system.conf
+++ b/board/stmicroelectronics/stm32mp2/overlay-demo/etc/rauc/system.conf
@@ -2,6 +2,8 @@
 compatible=%RAUC_COMPATIBLE%
 bootloader=uboot
 max-bundle-download-size=209715200
+mountprefix=/tmp/rauc
+data-directory=/data/rauc
 
 [keyring]
 path=/etc/rauc/ca.cert.pem
