board/stmicroelectronics: use filesystem label to mount data partition
mmc device indices are not stable since they do not have device tree
aliases. This means that the persistent data partition name is not stable,
and sometimes mounting it at boot time can fail.

Instead of depending on full partition names in /etc/fstab, use filesystem
labels instead. This requires enabling a corresponding option in Busybox.

Signed-off-by: Romain Gantois <romain.gantois@bootlin.com>

--- a/configs/st_stm32mp257f_ev1_demo_defconfig
+++ b/configs/st_stm32mp257f_ev1_demo_defconfig
@@ -18,6 +18,7 @@ BR2_LINUX_KERNEL_INTREE_DTS_NAME="st/stm32mp257f-ev1-ca35tdcid-ostl"
 BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp2/linux-dts/st"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_PACKAGE_LINUX_TOOLS_GPIO=y
+BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/common/busybox-enable-partlabel.config"
 BR2_PACKAGE_YAVTA=y
 BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_EXAMPLES=y
