configs/stm32mp1: enable Busybox label mount feature for demo configs
This Busybox configuration option is necessary for the "LABEL=data" fstab
entry to work properly.

Fixes: 28ca2de (board/stmicroelectronics: use filesystem label...)
Signed-off-by: Romain Gantois <romain.gantois@bootlin.com>

--- a/configs/st_stm32mp157d_dk1_demo_defconfig
+++ b/configs/st_stm32mp157d_dk1_demo_defconfig
@@ -22,6 +22,7 @@ BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectroni
 BR2_LINUX_KERNEL_DTB_OVERLAY_SUPPORT=y
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
+BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/common/busybox-enable-partlabel.config"
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_AMIXER=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
