board/stm32mp1: set rauc parameters for mount prefix and data directory
By default, rauc tries to mount bundles in /mnt/rauc, which will fail in
our case because /mnt is read-only.

Set the mountprefix system parameter so that rauc mounts bundles in
/tmp/rauc instead.

Additionally, the rauc documentation recommends using a persistent, non
redundant file to store update status and other information.

Set the data-directory system parameter so that rauc uses /data/rauc to
store its persistent data.

Signed-off-by: Romain Gantois <romain.gantois@bootlin.com>

--- a/board/stmicroelectronics/stm32mp1/overlay-demo/etc/rauc/system.conf
+++ b/board/stmicroelectronics/stm32mp1/overlay-demo/etc/rauc/system.conf
@@ -2,17 +2,19 @@
 compatible=%RAUC_COMPATIBLE%
 bootloader=uboot
 max-bundle-download-size=209715200
+mountprefix=/tmp/rauc
+data-directory=/data/rauc
 
 [keyring]
 path=/etc/rauc/ca.cert.pem
 use-bundle-signing-time=true
 
 [slot.rootfs.0]
-device=/dev/mmcblk0p5
+device=/dev/disk/by-partlabel/rootfs-a
 type=raw
 bootname=A
 
 [slot.rootfs.1]
-device=/dev/mmcblk0p6
+device=/dev/disk/by-partlabel/rootfs-b
 type=raw
 bootname=B
