--- a/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
+++ b/board/stmicroelectronics/stm32mp2/genimage-demo.cfg
@@ -32,10 +32,12 @@ image sdcard.img {
 	partition rootfs-a {
 		image = "rootfs.squashfs"
 		bootable = "yes"
+		size = 200M
 	}
 
 	partition rootfs-b {
 		bootable = "yes"
+		size = 200M
 	}
 
 	partition data {
