configs/st: Add openssl U-boot build dependency
Openssl was missing to build U-boot.
Add it to avoid build error.

Signed-off-by: Kory Maincent <kory.maincent@bootlin.com>

--- a/configs/st_stm32mp257_flash_defconfig
+++ b/configs/st_stm32mp257_flash_defconfig
@@ -28,5 +28,6 @@ BR2_TARGET_UBOOT_BUILD_SYSTEM_KCONFIG=y
 BR2_TARGET_UBOOT_CUSTOM_TARBALL=y
 BR2_TARGET_UBOOT_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,u-boot)v2022.10-stm32mp-r2.tar.gz"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="stm32mp25"
+BR2_TARGET_UBOOT_NEEDS_OPENSSL=y
 BR2_TARGET_UBOOT_FORMAT_DTB=y
 BR2_TARGET_UBOOT_CUSTOM_MAKEOPTS="DEVICE_TREE=stm32mp257f-ev1"
