--- a/configs/st_stm32mp257f_ev1_demo_defconfig
+++ b/configs/st_stm32mp257f_ev1_demo_defconfig
@@ -99,6 +99,7 @@ BR2_TARGET_UBOOT_CUSTOM_TARBALL=y
 BR2_TARGET_UBOOT_CUSTOM_TARBALL_LOCATION="$(call github,STMicroelectronics,u-boot)v2022.10-stm32mp-r2.tar.gz"
 BR2_TARGET_UBOOT_BOARD_DEFCONFIG="stm32mp25"
 BR2_TARGET_UBOOT_CONFIG_FRAGMENT_FILES="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/common/uboot-enable-squashfs.config"
+BR2_TARGET_UBOOT_NEEDS_OPENSSL=y
 BR2_TARGET_UBOOT_FORMAT_DTB=y
 BR2_TARGET_UBOOT_CUSTOM_DTS_PATH="$(BR2_EXTERNAL_ST_PATH)/board/stmicroelectronics/stm32mp2/uboot-dts/*"
 BR2_TARGET_UBOOT_CUSTOM_MAKEOPTS="dtb-y=stm32mp257f-ev1-mx.dtb DEVICE_TREE=stm32mp257f-ev1-mx"
